# pvenergy

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  data_request.py  dataanalysis.py  docker-compose.yaml  feature_accessor.py  feature_catalog.py  feature_processing.py  file_utilities.py  main.py  manage.py  plotting.py  pv.py  pyproject.toml  requirements.in  requirements.txt  solardata.py  weatherdata.py
.devcontainer/: Dockerfile  devcontainer.json
dashboard/: context_processors.py  formatting.py  forms.py  menu.py  urls.py  views.py
dashboard/static/dashboard/: dashboard.css  dashboard_api.js
dashboard/templates/dashboard/: _meta_table.html  _system_block.html  all_systems.html  base.html  feature_database.html  index.html  individual_systems.html  ml_models.html  models_info.html
data/merged/: pv_and_weather_system_id=1229.parquet  pv_and_weather_system_id=1276.parquet  pv_and_weather_system_id=1277.parquet  pv_and_weather_system_id=1284.parquet  pv_and_weather_system_id=1289.parquet  pv_and_weather_system_id=2.parquet  pv_and_weather_system_id=3.parquet  pv_and_weather_system_id=33.parquet  pv_and_weather_system_id=34.parquet
data/raw/pvdaq/: metadata.csv  metric_ids.csv  metrics_parquet_full.parquet
data/results/: system_constants.csv
djangotutorial/mysite/: settings.py
mysite/mysite/: settings.py
pvcore/: __init__.py  paths.py
pvcore/feature/: __init__.py  accessor.py  catalog.py  processing.py
pvcore/io/: __init__.py  file_utilities.py  nsrdb.py  openmeteo.py  pvdaq.py  request.py
pvcore/ml/: __init__.py  evaluation.py  model.py  pipeline.py
pvcore/plotting/: plotting.py
pvcore/utils/: file_utilities.py
pvenergy/: asgi.py  settings.py  wsgi.py
src/: main.py
src/dashboard/: formatting.py  views.py
src/dashboard/static/dashboard/: dashboard_api.js
src/dashboard/templates/dashboard/: _meta_table.html  sidebar.html
src/pvcore/: __init__.py  paths.py
src/pvcore/feature/: __init__.py  accessor.py  catalog.py  processing.py
src/pvcore/io/: __init__.py  nsrdb.py  openmeteo.py  pvdaq.py
src/pvcore/ml/: __init__.py  evaluation.py  model.py  pipeline.py
src/pvcore/plotting/: __init__.py  plotting.py
src/pvenergy/: settings.py
staticfiles/dashboard/: dashboard_api.js
