[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pvenergy"
version = "0.1.0"
authors = [
    { name = "Martin Schwald", email = "217314379+MSchwald@users.noreply.github.com" }
]
description = "ML-Pipeline & Django Dashboard for forecasting energy output of photovoltaic systems"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}

keywords = ["Photivoltaic Energy", "Machine Learning", "Django", "Solar Power", "Energy forecast"]
dependencies = [
    'jinja2==3.1.6',
    'aiobotocore==2.26.0', 'aiohappyeyeballs==2.6.1', 'aiohttp==3.13.2', 'aioitertools==0.13.0', 'aiosignal==1.4.0',
    'asgiref==3.11.0', 'attrs==25.4.0', 'botocore==1.41.5', 'certifi==2025.11.12', 'cffi==2.0.0', 'charset-normalizer==3.4.4',
    'contourpy==1.3.3', 'cycler==0.12.1', 'django==5.2.8', 'envvars==0.3.0', 'flatbuffers==25.9.23', 'fonttools==4.61.0', 'frozenlist==1.8.0',
    'fsspec==2025.10.0', 'h3==4.3.1', 'h5py==3.15.1', 'idna==3.11', 'jmespath==1.0.1', 'joblib==1.5.2', 'kiwisolver==1.4.9',
    'lightgbm==4.6.0', 'matplotlib==3.8.2', 'multidict==6.7.0', 'natsort==8.4.0', 'numpy==1.26.4', 'nvidia-nccl-cu12==2.28.9',
    'packaging==25.0', 'pandas==2.3.3', 'pillow==12.0.0', 'propcache==0.4.1', 'pvlib==0.13.1', 'pyarrow==22.0.0', 'pycparser==2.23',
    'pyparsing==3.2.5', 'python-dateutil==2.9.0.post0', 'pytz==2025.2', 'requests==2.32.5', 's3fs==2025.10.0', 'scikit-learn==1.7.2',
    'scipy==1.16.3', 'six==1.17.0', 'sqlparse==0.5.4', 'threadpoolctl==3.6.0', 'timezonefinder==8.1.0', 'tqdm==4.67.1', 'typing-extensions==4.15.0',
    'tzdata==2025.2', 'urllib3==2.5.0', 'wrapt==1.17.3', 'xgboost==3.1.2', 'yarl==1.22.0'
]

[project.urls]
Homepage = "https://github.com/MSchwald/pvenergy"

[project.scripts]
# Erlaubt den Start via 'pv-run'
pvenergy = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pvcore", "src/dashboard", "src/pvenergy", "src/main.py"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = ["src", "pyproject.toml", "README.md"]